--- a/requirements.in
+++ b/requirements.in
@@ -21,6 +21,7 @@ langchain
 langchain-community
 langgraph
 langchain-google-genai
+langchain-google-vertexai
 langchain-chroma
 langchain-huggingface
 
